<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".about" android:orientation="vertical">

    <TextView
            android:text="@string/name_me"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:text="@string/email_me"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/name_1"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/name_2"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/name_3"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/name_4"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>